--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord-api-types": "^0.31.0",
     "discord-webhook-node": "^1.1.8",
     "discord.js": "^13.6.0",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "google-api-client": "^2.1.0",
