--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "google-api-client": "^2.1.0",
     "googleapis": "^100.0.0",
     "gs": "^0.0.2",
+    "lodash": "^4.17.21",
     "node-windows": "^1.0.0-beta.6",
     "nodemon": "^2.0.15",
     "qckwinsvc": "^1.0.0",
