--- a/package.json
+++ b/package.json
@@ -12,23 +12,17 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
-    "axios": "^0.26.1",
+    "async": "^3.2.4",
     "discord-api-types": "^0.31.0",
     "discord-webhook-node": "^1.1.8",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "google-api-client": "^2.1.0",
-    "googleapis": "^100.0.0",
-    "gs": "^0.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^6.4.1",
     "node-windows": "^1.0.0-beta.6",
-    "nodemon": "^2.0.15",
-    "qckwinsvc": "^1.0.0",
-    "readline": "^1.3.0",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "eslint": "^8.12.0"
